# merenderos

./: .pre-commit-config.yaml  README.md  pyproject.toml
docs/: _config.yml  index.markdown
docs/_layouts/: default.html
docs/_posts/: .keep
tests/: test_merenderos.py
